@@ -394,6 +394,41 @@ ccm_region_get_rectangles (CCMRegion     *region,
 }
 
 /**
+ * ccm_region_get_xrectangles:
+ * @region: a #CCMRegion
+ * @rectangles: return location for an array of xrectangles
+ * @n_rectangles: length of returned array
+ *
+ * Obtains the area covered by the region as a list of rectangles.
+ * The array returned in @rectangles must be freed with g_free().
+ * 
+ **/
+void
+ccm_region_get_xrectangles (CCMRegion     *region,
+			  XRectangle **rectangles,
+			  gint          *n_rectangles)
+{
+    gint i;
+    
+    g_return_if_fail (region != NULL);
+    g_return_if_fail (rectangles != NULL);
+    g_return_if_fail (n_rectangles != NULL);
+    
+    *n_rectangles = region->numRects;
+    *rectangles = g_new (XRectangle, region->numRects);
+    
+    for (i = 0; i < region->numRects; i++)
+    {
+	RegionBox rect;
+	rect = region->rects[i];
+	(*rectangles)[i].x = rect.x1;
+	(*rectangles)[i].y = rect.y1;
+	(*rectangles)[i].width = rect.x2 - rect.x1;
+	(*rectangles)[i].height = rect.y2 - rect.y1;
+    }
+}
+
+/**
  * ccm_region_union_with_rect:
  * @region: a #CCMRegion.
  * @rect: a #cairo_rectangle_t.
